# ME700_NewtonSolver

./: .coverage  README.md  assignment_1_genAIuse.txt  pyproject.toml  setup.py  tutorials_NewtonSolver.ipynb
.github/workflows/: tests.yml
NewtonSolver/: Newton_Solver.py
Newton_Solver/: __init__.py
src/NewtonSolver/: NewtonSolver.py
src/Newton_Solver/: Newton_Solver.py
src/Newton_Solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_NewtonSolver.py
tutorials_NewtonSolver/: tutorials_NewtonSolver.ipynb
