[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Newton_Solver"
version = "0.0.0"
description = "A Newton Solver implementation"
authors = [{ name = "Rishabh", email = "rishy@bu.edu" }]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pytest",
    "pytest-cov",
    "matplotlib"
]
